--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <h1>Kit Kat Trading Bot</h1>
         <button id="runBotButton">Run Trading Bot</button>
         <div id="results" class="results"></div>
+        <br>
+        <a href="results.html">View Top 10 Stocks</a>
     </div>
 
     <script>
@@ -49,6 +51,8 @@
                 }
                 const data = await response.json();
                 document.getElementById('results').textContent = JSON.stringify(data, null, 2);
+                // Save the results to localStorage to display in the results page
+                localStorage.setItem('topStocks', JSON.stringify(data.top_stocks));
             } catch (error) {
                 document.getElementById('results').textContent = 'Error: ' + error.message;
             }
